--- a/css/index.css
+++ b/css/index.css
@@ -668,6 +668,11 @@
 }
 
 @media(max-width:980px){
+    .passive, .active{
+        font-size: 15px;
+        height: 40px;
+        padding-bottom: 15px;
+    }
     .right--side>h2{
         margin-top: 15px;
         font-size: 20px;
@@ -715,6 +720,7 @@
 }
 
 @media(max-width:865px){
+    
     .card--body{
         margin: auto;
     }
@@ -747,6 +753,12 @@
 
 }
 @media(max-width:610px){
+    .passive, .active{
+        font-size: 15px;
+        height: 40px;
+        padding-bottom: 15px;
+    }
+    
     .form--label{
         font-size: 11px;
     }
