--- a/css/search-page.css
+++ b/css/search-page.css
@@ -456,6 +456,11 @@
 }
 
 @media (max-width:950px) {
+    .passive, .active{
+        font-size: 15px;
+        height: 40px;
+        padding-bottom: 15px;
+    }
     .form--dropdown{
         margin-left: 30px;
     }
