--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,9 @@
 .right--section{
     position: relative;
 }
+.right--section>button{
+    margin-right: 15px;
+}
 .currency--selector{
     position: absolute;
     bottom: -40px;
@@ -26,6 +29,18 @@
     position: absolute;
     bottom: -40px;
     left: 10px;
+    color: white;
+    background-color: black;
+    padding: 2px 10px;
+    border-radius: 7px;
+    font-size: 14px;
+    opacity: 0.9;
+    display: none;
+}
+.question--mark--selector{
+    position: absolute;
+    bottom: -40px;
+    left: 70px;
     color: white;
     background-color: black;
     padding: 2px 10px;
@@ -59,6 +74,16 @@
     height: 30px;
     border-radius: 15px;
     margin-bottom: 5px;
+}
+.question--mark{
+    border: solid 1px white;
+    background-color: transparent;
+    border-radius: 50px;
+    padding: 0px 7px;
+}
+.question--mark>i{
+    color: white;
+    
 }
 .list--your--property{
     border: none;
@@ -262,7 +287,7 @@
 }
 .form{
     background-color: #ffb700;
-    height: 415px;
+    height: 440px;
     width: 100%;
     border-radius: 15px;
     padding-top: 15px;
@@ -286,7 +311,7 @@
     margin-bottom: 7px;
     width: 92%;
 }
-.check{
+.check--in--date{
     background-image: url('../images/calendar-regular.svg');
     background-size: 20px 20px; 
     background-repeat: no-repeat;
@@ -295,10 +320,137 @@
     padding-top: 7px;
     padding-bottom: 7px;
     border-radius: 5px;
-    width: 91%;
+    background-color: white;
+    width: 92%;
     outline: none;
     border: none;
+    font-size: 14px;
+    cursor: pointer;
+    position: relative;
 }
+.check--in--date--calendar{
+    position: absolute;
+    z-index: 100;
+    height: 450px;
+    width: 600px;
+    background-color: white;
+    box-shadow: 1px 1px 5px black;
+}
+.check--in--page--picker{
+    display: flex;
+    justify-content: space-evenly;
+}
+.calendar--picker, .flexible{
+    cursor: pointer;
+    height: 50px;
+    width: 100%;
+    border: none;
+    background-color: transparent;
+}
+.calendar--picker{
+    color: #006ce4;
+}
+.calendar--picker:hover, .flexible:hover, .calendar--day--picker:hover,.month--picker--month:hover{
+    background-color: #d4d6d6;
+    transition: 0.3s;
+}
+.divider{
+    margin: 0;
+}
+.flexible--picker{
+    margin-top: 30px;
+    margin-left: 25px;
+    display: none;
+}
+.flexible--radio--buttons{
+    margin-top: 15px;
+    display: flex;
+    margin-bottom:25px;
+}
+.form--check--flexible{
+    margin-right: 30px;
+}
+.month--picker{
+    margin-top: 15px;
+    display: flex;
+}
+.month--picker--month{
+    display: block;
+    width: 80px;
+    background-color: transparent;
+    border: solid 0.25px rgb(214, 211, 211);
+    margin-right: 15px;
+    border-radius: 10px;
+}
+.month--picker--month>p{
+    margin: 0;
+}
+.calendar{
+    display: block;
+}
+.flexible--footer{
+    display: none;
+    justify-content: right;
+    margin-right: 20px;
+    margin-top: 30px;
+    
+}
+.flexible--footer>p{
+    margin-right: 15px;
+    margin-top: 7px;
+}
+.flexible--footer>button{
+    height: 40px;
+    cursor: not-allowed;
+}
+.calendar--day--picker--div{
+    margin-left: 20px;
+    display: block;
+}
+.active--calendar--day--picker{
+    margin-right: 10px;
+    padding: 6px 10px;
+    background-color: transparent;
+    border-radius: 20px;
+    color:#006ce4;
+    border: solid 1px #006ce4;
+}
+.calendar--day--picker{
+    margin-right: 10px;
+    padding: 6px 10px;
+    background-color: transparent;
+    border: solid 1px grey;
+    border-radius: 20px;
+}
+
+
+.check--out--date{
+    background-image: url('../images/calendar-regular.svg');
+    background-size: 20px 20px; 
+    background-repeat: no-repeat;
+    background-position: 10px; 
+    padding-left: 40px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    border-radius: 5px;
+    background-color: white;
+    width: 92%;
+    outline: none;
+    border: none;
+    font-size: 14px;
+    cursor: pointer;
+    position: relative;
+}
+.check--out--date--calendar{
+    position: absolute;
+    z-index: 100;
+    height: 450px;
+    width: 600px;
+    background-color: white;
+    box-shadow: 1px 1px 5px black;
+}
+
+
 .dropdown{
     margin-bottom: 10px;
 }
@@ -455,8 +607,32 @@
     margin-top: 15px;
     border-radius: 15px;
     overflow: hidden;
-    height: 200px;
+    height: 100px;
     width: 100%;
+}
+.header--wrapper{
+    display: flex;
+    justify-content: space-between;
+}
+.header--name{
+    margin-top: 25px;
+}
+.map2{
+    background-image: url('../images/360_F_449736488_IAGo58o7DloC8Os5S5v9vppX3BIxzK4S.jpg');
+    background-repeat: no-repeat;
+    border: solid 0.5px #bebcbc;
+    margin-top: 15px;
+    border-radius: 15px;
+    overflow: hidden;
+    height: 75px;
+    width: 150px;
+}
+.map--button--wrapper{
+    width: 100%;
+    text-align: center;
+}
+.map--button--wrapper>button{
+    margin-top: 18px;
 }
 .right--side--dropdown{
     margin-top: 15px;
@@ -487,6 +663,21 @@
     border-radius: 15px;
     height: 95%;
     width: 90%;
+    position: relative;
+}
+.heart--wrapper{
+    background-color: white;
+    height: 30px;
+    width: 30px;
+    border-radius: 50px;
+    cursor: pointer;
+    position: absolute;
+    top: 25px;
+    left: 20px;
+}
+.heart--wrapper>i{
+    padding-left: 8px;
+    padding-top: 8px;
 }
 .card--body{
     margin-left: -45px;
@@ -655,7 +846,7 @@
         height: 40px;
         padding-bottom: 15px;
     }
-    .right--side>h2{
+    .header--name{
         font-size: 24px;
     }
     .left--section{
@@ -678,8 +869,8 @@
         height: 40px;
         padding-bottom: 15px;
     }
-    .right--side>h2{
-        margin-top: 15px;
+    .header--name{
+        margin-top: 35px;
         font-size: 20px;
     }
     .card{
