mobile-form-fix

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,17 @@
 
+body{
+    overflow-x: hidden;
+}
 .navbar{
     background-color: #003b95;
+}
+.dot {
+    height: 5px;
+    width: 5px;
+    background-color: black;
+    border-radius: 50%;
+    margin-top: 8px;
+    margin-right: 5px;
 }
 .left--section{
     color: white;
@@ -248,43 +259,155 @@
 }
 .mobile--left--side{
     width: 110%;
+    padding-bottom: 25px;
+    padding-top: 10px;
     margin-left: -25px;
-    height: 100px;
     background-color:#ffb700;
     display: none;
-    
 }
-.search-input{
+.mobile--left--side--wrapper{
+    width: 100%;
+}
+.search--input--mobile{
     border: solid 0.25px rgb(196, 194, 194);
     border-radius: 10px;
     text-align: center;
     margin: auto;
-    width: 80%;
-    height: 100%;
+    width: 93%;
+    height: 45px;
     overflow: hidden;
 }
-.search-input>input{
+.search--input--mobile>input{
     background-image: url('../images/magnifying-glass-solid.svg');
     background-size: 20px 20px; 
     background-repeat: no-repeat;
     background-position: 10px;
     padding-left: 40px; 
     width: 100%;
-    height: 61%;
+    height: 100%;
     border: none;
     outline: none;
 }
-.select--dates{
-    width: 100%;
-    height: 40%;
+.check--in--mobile{
+    display: flex;
+    justify-content: space-around;
+}
+.check--in--date--mobile,.check--out--date--mobile{
+    background-color: white;
+    height: 40px;
+    width: 42%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 3px;
+    padding-left: 5px;
+}
+.check--in--date--mobile--header{
+    font-size: 12px;
+    margin-bottom: 0px;
+}
+.select--date--mobile{
+    font-weight: 500;
+    font-size: 13px;
+    margin: 0;
+}
+.mobile--calendar{
+    height: 270px;
+    width: 91%;
+    background-color: white;
+    text-align: center;
+    margin: auto;
+    display: none;
+}
+.mobile--person--counter{
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-around;
     text-align: left;
-    background-color: #e0dfdf;
-    padding-top: 7px;
-    padding-left: 7px;
 }
-.select--dates>a{
+.mobile--person--counter--header{
+    margin: 0;
+}
+.mobile--person--counter--button{
+    background-color: transparent;
+    border: none;
+    padding-top: -50px;
+    font-weight: 500;
+    padding-left: 0;
+}
+.mobile--picker{
+    background-color: white;
+    height: 50px;
+    width:25%;
+    text-align: start;
+    margin-bottom: 5px;
+    border-radius: 3px;
+    padding-left: 5px;  
+}
+.dropdown--menu{
+    max-height: 150px;
+    overflow: scroll;
+}
+.mobile--radio--question--header{
+    width: 91%;
+    text-align: center;
+    margin: auto;
+    background-color: white;
+    height: 50px;
+}
+.mobile--question{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding-left: 10px;
+    padding-right: 10px;
+    background-color: rgb(204, 204, 204);
+}
+.mobile--question>p{
+    margin: 0;
+}
+.mobile--question--text{
+    font-size: 12px;
     text-decoration: none;
+    color: black;
+    margin: 0;
 }
+.mobile--radio--question--question--mark{
+    background-color: black;
+    border-radius: 50px;
+    height: 20px;
+    width: 20px;
+    margin-top: 2px;
+}
+.collapse{
+    max-height: 10px;
+}
+.collapse--mobile{
+    z-index: 101;
+    text-align: start;
+    font-size: 12px;
+}
+.mobile--question--check--wrapper{
+    display: flex;
+    justify-content: space-around;
+}
+.mobile--question--check{
+    width: 45%;
+    text-align: start;
+}
+.check-active{
+    border-right: solid 0.5px rgb(158, 158, 158);
+}
+.btn--mobile--wrapper{
+    width: 100%;
+    text-align: center;
+    margin: auto;
+}
+.btn--mobile{
+    margin-top: 15px;
+    width: 70%;
+}
+
+
 .form{
     background-color: #ffb700;
     height: 440px;
@@ -585,6 +708,11 @@
     width: 92%;
     margin-top: 15px;
 }
+.more--button{
+    border: none;
+    background-color: transparent;
+    color: #0255d3;
+}
 .options{
     margin-top: 15px;
     padding-top: 10px;
@@ -714,6 +842,56 @@
     margin-top: 17px;
     cursor: pointer;
     margin-left: -10px;
+}
+.card--mobile--body{
+    margin-left: -30px;
+    display: none;
+}
+.card--title--mobile{
+    font-size: 14px;
+}
+.card--rating--mobile{
+    display: flex;
+    width: 100%;
+}
+.rating--number--mobile{
+    font-size: 13px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 2px;
+    margin-right: 10px;
+    max-height: 25px;
+    background-color:#0255d3;
+    border-radius: 8px;
+    color: white;
+}
+.rating--word--mobile{
+    font-size: 13px;
+    margin-right: 10px;
+}
+.review--mobile{
+    font-size: 13px;
+}
+
+.location--mobile{
+    display: flex;
+    font-size: 9px;
+    margin-bottom: 0px;
+}
+.dot2{
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: black;
+    margin-right: 5px;
+    margin-top: 5px;
+}
+.location--place--mobile{
+    margin-right:5px;
+}
+.speciality--mobile{
+    font-size: 12px;
+    margin: 0;
 }
 .rating--word{
     font-weight: 500;
@@ -955,11 +1133,19 @@
     .dropdown--button{
         display: block;
     }
-    .options, .map, .form{
+    .options, .map, .form, .location--list{
         display: none;
     }
     .mobile--left--side{
         display: block;
+    }
+    .mobile--left--side--wrapper{
+        width: 70%;
+        text-align: center;
+        margin: auto;
+    }
+    .header--wrapper{
+        display: none;
     }
 
 }
@@ -988,5 +1174,22 @@
     }
     .second--check--question{
         margin-left: 35px;
+    }
+    .mobile--left--side--wrapper{
+        width: 80%;
+    }
+}
+@media(max-width:575px){
+    .card---body{
+        display: none;
+    }
+    .card--mobile--body{
+        display: block;
+    }
+    .card--right--side--wrapper{
+        display: none;
+    }
+    .mobile--left--side--wrapper{
+        width: 100%;
     }
 }
